<resources>
    <string name="app_name">Find My Android</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_device">Device</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="scale">Scale: 1</string>
    <string name="radius">Radius: 0</string>
    <string name="scalenozero">Scale:</string>
    <string name="scalewithone">Scale: 1</string>
    <string name="radiuscolon">Radius: </string>
    <string name="declaration">Position declared by:&#160;</string>
    <string name="start">S T A R T</string>
    <string name="information">I N F O R M A T I O N</string>
    <string name="degrees">Degrees:&#160;</string>
    <string name="accuracy">Accuracy:&#160;</string>
    <string name="title_activity_beacon">BluetoothActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_reorder">Reorder</string>
    <string name="delete_all_beacons">Delete All Devices</string>
    <string name="edit_beacons">Edit Devices</string>
    <string name="misc">Misc</string>
    <string name="calibrate_beacon">Calibrate Devices</string>
    <string name="main">Main</string>
    <string name="beacon">Beacon</string>
    <string name="signal">No Signal</string>
    <string name="distance">Distance</string>
    <string name="saveAS">Save</string>
    <string name="to_calibrate_move_away_from_the_beacon">To calibrate, move away from the device and save the signal strength at different distances, the more readings, the more accurate the positioning will be.</string>
    <string name="reset_beacon_calibration">Reset device Calibration</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This username is invalid, must be between 4 and 12 characters, cannot contain protected character "|"</string>
    <string name="error_incorrect_password">This password is incorrect, must be between 4 and 12 characters, cannot contain protected character "|"</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing username completions.</string>
    <string name="admin_enable">Enable Administrator Access</string>
    <string name="prevent_app_info">For preventing app uninstalling, remote locking,wiping, and settings changes</string>
    <string name="admin_require">Requires Admin</string>
    <string name="prevent_uninstallation">Prevent Uninstall</string>
    <string name="unflag">Un-Flag Device</string>
    <string name="set_app_password">Set App Password</string>
    <string name="set_password_hint">Set Password Hint</string>
    <string name="monitor_SIM">Monitor SIM Card</string>
    <string name="sim_change_action">SIM Change Action</string>
    <string name="map_type">Map Type</string>
    <string name="show_margin">Show Margin Of Error</string>
    <string name="send_email_battery_low">Send Email When Battery Is Low</string>
    <string name="battery_percent">Battery %</string>
    <string name="enable_sms_listen">Enable SMS Listening</string>
    <string name="play_ring">To Play Ringtone</string>
    <string name="ring_duration">Ringtone Duration (Seconds)</string>
    <string name="ringtone">Ringtone</string>
    <string name="volume_percentage">Volume %</string>
    <string name="relay_position_email">To Relay Position via Email</string>
    <string name="relay_position_text">To Relay Position via Text</string>
    <string name="remote_enable_wifi">To Remotely Enable WiFi</string>
    <string name="flag_device_lost">To Flag Device As Lost</string>
    <string name="remote_wipe_sd_sms">To Remotely Wipe SD Card</string>
    <string name="to_speak">To Speak (Text To Speech)</string>
    <string name="speak_summary">speak: text to read here</string>
    <string name="lock_phone_admin">SMS To Remotely Lock Phone</string>
    <string name="sms_wipe_phone_admin">SMS To Wipe Phone (WARNING)</string>
    <string name="email_to_send_to">Email To Send Updates To: </string>
    <string name="email_include_contacts">Include Contacts</string>
    <string name="include_contacts_summary">Include list of contacts</string>
    <string name="email_include_call_log">Include Call Log</string>
    <string name="include_call_log_summary">Include list of calls</string>
    <string name="position_update_interval">Position Update Interval</string>
    <string name="interval_updates_summary">Interval between position updates after a \'relay position\' is triggered</string>
    <string name="number_position_updates">Number Of Position Updates</string>
    <string name="number_position_updates_summary">Number of position updates after a \'relay position\' is triggered</string>
    <string name="check_permissions_title">Check Permissions</string>
    <string name="gmail_username_title">Gmail Username</string>
    <string name="gmail_password_title">Gmail Password</string>
    <string name="triggers_gmail_title">Allow Triggers via Gmail</string>
    <string name="gmail_trigger_summary">Will monitor a Gmail inbox for unread emails and scan their subject lines for triggers (Scanning is performed on a battery level change).</string>
    <string name="remote_lock_email">Trigger To Remotely Lock Phone</string>
    <string name="relay_position_gmail">Trigger To Relay Position</string>
    <string name="flag_device_gmail">To Flag Device As Lost</string>
    <string name="wipe_phone_gmail">Trigger To Wipe Phone (WARNING)</string>
    <string name="wipe_SD_gmail">Trigger To Wipe SD Card (WARNING)</string>
    <string name="delete_email_optional">Delete Email Afterwards</string>
    <string name="txt_to_speech_gmail_title">To Speak (Text To Speech)</string>
    <string name="txt_to_speech_gmail_summary">speak: text to read here</string>
    <string name="info_gmail_triggering">Info</string>
    <string name="toggle_geofence">Toggle Geofence</string>
    <string name="geo_map">Geofence Map</string>
    <string name="geo_scale">Geofencing Scale</string>
    <string name="beacons_title">Beacons/Bluetooth</string>
    <string name="relay_beacon_sms">Relay Beacon/BT Info (SMS)</string>
    <string name="relay_beacon_email">Relay Beacon/BT Info (Email)</string>
    <string name="beacon_info">Info:&#160;</string>
    <string name="beacon_info_summary">This is a slow operation</string>
    <string name="sign_up_account">Sign Up For An Account</string>
    <string name="sign_up_account_summary">Will automatically update the database with the device\'s location at a set interval. Use the web interface to retrieve the data.</string>
    <string name="second_phone">Secondary Phone Number (Optional):&#160;</string>
    <string name="hide_app">Toggle Hiding App From Drawer</string>
    <string name="sms_to_unhide">SMS Trigger To Unhide App</string>
    <string name="sort_loc_methods">Sort Location Methods</string>
    <string name="open_interface">Open Web Interface</string>
    <string name="register_gcm">Register For GCM Token</string>
    <string name="get_gcm_token">Get Current GCM Token</string>
    <string name="lock_phone_gcm">Lock Phone</string>
    <string name="backup_shared_prefs">Backup Preferences</string>
    <string name="add_gcm_web_title">GCM Messaging/Triggers</string>
    <string name="locator_precedence_title">Locator Precedence</string>
    <string name="misc_title">Misc</string>
    <string name="beacons_beta_title">Beacons/Bluetooth (Beta)</string>
    <string name="geofencing_beta">Geofencing (Beta)</string>
    <string name="gmail_trigger_header">Gmail Triggers</string>
    <string name="gmail_sending_header">Gmail Account For Email Sending</string>
    <string name="email_text_header">Email and Text Settings</string>
    <string name="email_settings_header">Email Settings</string>
    <string name="admin_triggers_header">Admin Triggers</string>
    <string name="sms_trigger_header">SMS Triggers</string>
    <string name="battery_header">Battery Settings</string>
    <string name="gmaps_settings">Google Maps Settings</string>
    <string name="sim_header">SIM Settings</string>
    <string name="device_header">Device</string>
    <string name="android_info">Android Information</string>
    <string name="device_info">Device Information</string>
    <string name="cell_info">Cell Information</string>
    <string name="screen_lock_settings">Screen Lock Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="manage_location_settings">Manage Location Settings</string>
    <string name="location_recommendation">\'High Accuracy\' is recommended</string>
    <string name="screen_lock_recommend">A screen lock is recommended</string>
    <string name="manage_screen_lock">Manage Screen Lock</string>
    <string name="default_summary">default</string>
    <string name="ringer_header">Ringer Settings</string>
    <string name="current_value">Current:&#160;</string>
    <string name="seconds">s</string>
    <string name="trigger_value">Trigger:&#160;</string>
    <string name="current_volume">Current volume:&#160;</string>
    <string name="current_percentage">Current percentage:&#160;</string>
    <string name="admin_already_active">Admin already active</string>
    <string name="my_website">https://oliverbathurst.github.io/web</string>
    <string name="unflag_device">Device un-flagged</string>
    <string name="default_ring_dur">Current: 20s (default)</string>
    <string name="OK">OK</string>
    <string name="my_name">Created by: Oliver Bathurst</string>
    <string name="email_address">oliverbathurst12345@gmail.com</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="beacons_activity_header">Bluetooth</string>
    <string name="copy">Copy</string>
    <string name="no_app_version_found">No version found</string>
    <string name="submit_login">SUBMIT</string>
    <string name="enter_password_prompt">Please enter your password:&#160;</string>
    <string name="login_fail_message">Failure to login</string>
    <string name="show_password_hint">Password hint:&#160;</string>
    <string name="failure_parsing">Failure to parse text</string>
    <string name="loaded_bt_device">Loaded</string>
    <string name="div_by_0_error">Division by zero/input error</string>
    <string name="no_distance_found">No distance provided</string>
    <string name="beacon_update_title">Bluetooth Update</string>
    <string name="location_update_title">Location Update</string>
    <string name="geofence_breach_title">Geofence Breach</string>
    <string name="margin_of_error">Margin of error:&#160;</string>
    <string name="device_location">Device Location:&#160;</string>
    <string name="meters_unit">m</string>
    <string name="perform_permissions_checkup">Not all permissions granted, perform a permissions checkup.</string>
    <string name="locator_precedence_warning">No not edit these without good reason, this order has been specifically chosen for optimal accuracy</string>
    <string name="warning">Warning</string>
    <string name="selected">Selected:&#160;</string>
    <string name="sec_exception">Security Exception:&#160;</string>
    <string name="default_null_location">Device Location</string>
    <string name="del">Delete</string>
    <string name="batt_manager_null">Battery manager is null</string>
    <string name="build_number_low">Build number low</string>
    <string name="no_saved_beacons">No saved devices</string>
    <string name="calibrate">Calibrate</string>
</resources>