<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/app_name">
        <ListPreference
            android:key="projectVersion"
            android:summary="@string/default_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/android_info">
        <ListPreference
            android:key="androidInfo"
            android:summary="@string/default_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/device_info">
        <Preference
            android:key="deviceInfo"
            android:summary="@string/default_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectable= "false"/>
        </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/cell_info">
        <Preference
            android:key="cellInfo"
            android:summary="@string/default_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectable= "false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/screen_lock_settings">
            <Preference
                android:title="@string/manage_screen_lock"
                android:key="screen_lock_settings"
                android:summary="@string/screen_lock_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectable= "true"/>
        </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/location_settings">
        <Preference
            android:title="@string/manage_location_settings"
            android:key="settings_location_settings"
            android:summary="@string/location_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectable= "true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_preference">
    </PreferenceCategory>
</PreferenceScreen>
