<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/main">
            <menu>
                <item
                    android:id="@+id/View_Beacons"
                    android:icon="@drawable/ic_view_agenda_black_24dp"
                    android:title="@string/edit_beacons" />
                <item
                    android:id="@+id/Erase_Beacons"
                    android:icon="@drawable/ic_delete_black_24dp"
                    android:title="@string/delete_all_beacons" />
            </menu>
        </item>
    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/calibrate"
                android:icon="@drawable/ic_edit_black_24dp"
                android:title="@string/calibrate_beacon" />
        </menu>
    </item>

</menu>
