<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/beaconContent"
    tools:context="com.oliver.bathurst.individualproject.BeaconConfig">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="201dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:id="@+id/distanceBeacon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_brightness_1_black_24dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/distanceBeacon"
        android:layout_alignStart="@+id/distanceBeacon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_signal_wifi_2_bar_black_24dp"
        android:layout_above="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/beaconName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignEnd="@+id/distanceBeacon"
        android:layout_alignRight="@+id/distanceBeacon"
        android:layout_below="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/beacon"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignEnd="@+id/beaconName"
        android:layout_alignRight="@+id/beaconName"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/signal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/distanceBeacon"
        android:layout_alignLeft="@+id/distanceBeacon"
        android:layout_alignStart="@+id/distanceBeacon"
        android:text="@string/distance" />

    <Button
        android:id="@+id/saveBeacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/saveAS" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signal"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/signal"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginTop="116dp"
        android:text="@string/calibrate"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_calibrate_move_away_from_the_beacon"
        android:textSize="12sp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/CMorM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/distanceBeacon"
        android:layout_alignRight="@+id/distanceBeacon"
        android:layout_alignEnd="@+id/distanceBeacon"
        android:layout_marginTop="43dp"
        android:layout_alignLeft="@+id/distanceBeacon"
        android:layout_alignStart="@+id/distanceBeacon" />

</RelativeLayout>
